# Rendering-with-opengl

./: CMakeLists.txt  Model.h  fly_camera.h  glad.c  main.cpp  shader.h
CheckPoints/: Assimp_Explanation.txt  CubeMaps and Skybox.cpp  Sorted_Windows.cpp
Notes/: Advanced GLSL  Advanced OpenGL - Geometry Shader  Advanced OpenGL - Instancing  Advanced OpenGL - Stencil Testing.txt  Advanced OpenGL- Advanced Data  Advanced OpenGL_FrameBuffers  Depth Testing.txt  Model Loading - MeshClassExplanation.txt  Stencil Test.txt
Scripts/: Transformations.cpp
Tutorials/: AdvancedLighting_BlinnPhong.cpp  AdvancedOpenGL_GeometryShader.cpp  AdvancedOpenGL_StencilTesting.cpp  DearImgui.cpp  GettingStarted_Camera.cpp  Lighting_Phong_Lighting.cpp
